<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.orsys.ballard.addclient.AddClientActivity">

   <include layout="@layout/toolbar_layout" android:id="@+id/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/contact_imageview"
        android:layout_below="@+id/toolbar"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/contact"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/contact_imageview"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_below="@+id/contact_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname" />

        <EditText
            android:id="@+id/last_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname" />

        <EditText
            android:id="@+id/address_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/zipcode_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/zipcode" />

            <EditText
                android:id="@+id/city_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_marginTop="-20dp"
        android:id="@+id/camera_floating_button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/contact_imageview"
        android:layout_marginRight="8dp"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_height="wrap_content" />

</RelativeLayout>

